# ChangeLog for media-sound/alsaplayer
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  18 Jun 2013; Dominique Michel <dominique_libre@users.sourceforge.net>
  alsaplayer-9999.ebuild: use in source build, the dekstop file is
  not installed otherwise

  10 Mar 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  alsaplayer-9999.ebuild:
  Remove esd useflag.
  Minor cleanup.
  Change bad character in my prevoius ChangeLog Messages.
  Change ChangeLog header.

  27 Dec 2012; Karl Linden <lilrc@users.ourceforge.net>
  remove inherit on deprecated eclasses
  updated EAPI
  cleanup

  06 Jan 2012; Gavin Pryke <gavinlee303@googlemail.com> metadata.xml:
  copy USE description from use.local.desc to metadata.xml

*alsaplayer-9999.ebuild (16 Jun 2007)
  27 Mar 2011: Dominique Michel <dominique@tuxfamily.org>
  - Added a configure section in order to respect the API

  18 Mar 2011: Dominique Michel <dominique@tuxfamily.org>
  - Moved to GIT

  18 Mar 2011: Dominique Michel <dominique@tuxfamily.org>
  - Removed outdated econf option

  13 Mar 2011: Dominique Michel <dominique@tuxfamily.org>
  - Removed outdated audiofile dependency and associated options

  21 Mar 2010: Dominique Michel <dominique@tuxfamily.org>
  - Removed outdated unipatch eclass

  16 Jun 2007; Dominique Michel <dominique@tuxfamily.org>
  - Bux #172115 is hopefully fixed into the svn
  - Added eautoreconf in the ebuild as in portage
  - build on 64 bit system with flac > 1.4 hopefully fixed into the svn
  - Fixed some potential buffer overflow.

  See the ChangeLog of the program for more details.
  Please test and report all bugs you encounter.
  We also need some artwork. Please look at http://www.alsaplayer.org for the datails.
  
  Some date before:
  - Added custom-cflags USE flag. Don't use it if the compilation fail or get
    strange results with the program.

*alsaplayer-0.99.80_rc1 (12 Jun 2007)

  12 Jun 2007; Ryan Hill <dirtyepic@gentoo.org>