@@ -1,4 +1,4 @@
-# Copyright 1999-2013 Gentoo Foundation
+# Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
@@ -45,10 +45,10 @@ AUTOTOOLS_IN_SOURCE_BUILD=1
 
 DOCS=( AUTHORS ChangeLog README TODO docs/wishlist.txt )
 
-src_prepare() {
-	./bootstrap || die "bootstrap failed"
-	autotools-utils_src_prepare
-}
+#src_prepare() {
+#	epatch "${FILESDIR}"/*.patch
+#	autotools-utils_src_prepare
+#}
 
 src_configure() {
 	use xosd || export ac_cv_lib_xosd_xosd_create="no"
