@@ -2,6 +2,10 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  29 Jun 2014; Dominique Michel <dominique_libre@users.sourceforge.net>
+  alsaplayer-9999.ebuild: Commented out src_prepare, and changed it
+  for easy patching.
+
   18 Jun 2013; Dominique Michel <dominique_libre@users.sourceforge.net>
   alsaplayer-9999.ebuild: use in source build, the dekstop file is
   not installed otherwise
